--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(229, 235, 222);
+  background-color: white;
   color: rgba(0, 0, 0, 1);
 }
 
@@ -9,27 +9,30 @@ p {
 }
 
 /* Formatação de imagens com legendas*/
-.foto-legenda {
+.foto-milton {
   position: relative;
-  border: 8px solid white;
-  box-shadow: 1px 1px 4px black;
+  /* border: 1px solid white;*/
+  /*box-shadow: 1px 1px 4px black; */
+  text-align: right;
 }
-.foto-legenda img {
-  width: 100%;
-  height: 100%;
+.foto-milton img {
+  width: 20%;
+  height: 20%;
+  text-align: center;
 }
-.foto-legenda figcaption {
+/*.foto-milton figcaption {
   opacity: 0;
   position: absolute;
   top: 0px;
   background-color: rgba(0, 0, 0, 0.4);
-  color: white;
+  color: black;
   width: 100%;
   height: 100%;
   padding: 10px;
   box-sizing: border-box;
   transition: opacity 1s;
-}
-.foto-legenda:hover figcaption {
+  text-align: center;
+}*/
+.foto-milton:hover figcaption {
   opacity: 1;
 }
